--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -14,13 +14,12 @@ steps:
   - 'build'
   - '-t'
   - 'gcr.io/$PROJECT_ID/hello-app:$SHORT_SHA'
+  - '-t'
+  - 'gcr.io/$PROJECT_ID/hello-app:latest'
   - '.'
 
-# This step pushes the image to Container Registry
-# The PROJECT_ID and SHORT_SHA variables are automatically
-# replaced by Cloud Build.
-- name: 'gcr.io/cloud-builders/docker'
-  id: Push
-  args:
-  - 'push'
+# This will pushes the images to Container Registry
+images:
   - 'gcr.io/$PROJECT_ID/hello-app:$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/hello-app:latest'
+
